mra/plots/XYPlot: Fix Java9+ deprecation for new Double.